added full page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src=" https://cdnjs.com/libraries/fullPage.js"></script>
+
 </head>
 <body>
-Hello World
-</body>
+<div id="fullpage">
+	<div class="section">About Me</div>
+	<div class="section">Work</div>
+	<div class="section">Some section</div>
+	<div class="section">Some section</div>
+</div></body>
 </html>
