--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<title></title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src=" https://cdnjs.com/libraries/fullPage.js"></script>
-
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('#fullpage').fullpage();
+		});
+	</script>
 </head>
 <body>
 <div id="fullpage">
