--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<meta name="Resource-type" content="Document" />
 
 
-	<link rel="stylesheet" type="text/css" href="/fullpage-js-master/jquery.fullPage.css" />
-	<link rel="stylesheet" type="text/css" href="/fullpage-js-master.examples.css" />
+	<link rel="stylesheet" type="text/css" href="fullpage-js-master/jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="fullpage-js-master.examples.css" />
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-	<script type="text/javascript" src="/fullpage-js-master/vendors/scrolloverflow.js"></script>
+	<script type="text/javascript" src="fullpage-js-master/vendors/scrolloverflow.js"></script>
 
-	<script type="text/javascript" src="/jquery.fullPage.js"></script>
+	<script type="text/javascript" src="jquery.fullPage.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
