--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 	<link rel="stylesheet" type="text/css" href="fullpage-js-master/jquery.fullPage.css" />
-	<link rel="stylesheet" type="text/css" href="fullpage-js-master.examples.css" />
+	<link rel="stylesheet" type="text/css" href="fullpage-js-master/examples.css" />
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
