--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<meta name="Resource-type" content="Document" />
 
 
-	<link rel="stylesheet" type="text/css" href="fullpage-js-master/jquery.fullPage.css" />
-	<link rel="stylesheet" type="text/css" href="fullpage-js-master/examples.css" />
+	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="examples.css" />
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
