--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-	<script type="text/javascript" src="fullpage-js-master/vendors/scrolloverflow.js"></script>
+	<script type="text/javascript" src="scrolloverflow.js"></script>
 
 	<script type="text/javascript" src="jquery.fullPage.js"></script>
 	<script type="text/javascript">
