--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 <body>
 
 <div id="fullpage">
-	<div class="section active" id="section0"><h1>fullPage.js</h1></div>
+	<div class="section active" id="section0">
+		<h1>Hi</h1>
+		<p>I'm a web developer that is active on chaturbate. During my time here I have made over a 100 profiles for different models and they are in love with my work. Other then making profile I have helped out a lot of models in promoting themselves and getting more users and the all important tokens.
+		<br>
+		If you would like me to help you out on chaturbate or with the profile work please email me at <a href="">sanaiqbal321@gmail.com</a>
+		<br>
+		Please view below some of the work that I have done.</p>
+	</div>
 	<div class="section" id="section1">
 	    <div class="slide "><h1>Simple Demo</h1></div>
 	    <div class="slide active"><h1>Only text</h1></div>
