--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	</script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="hover.css">
+        <script src="hover.js"></script> 
 
 
 </head>
