--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<h1>Hi</h1>
 		<p>I'm a web developer that is active on chaturbate. During my time here I have made over a 100 profiles for different models and they are in love with my work. Other then making profile I have helped out a lot of models in promoting themselves and getting more users and the all important tokens.
 		<br>
-		If you would like me to help you out on chaturbate or with the profile work please email me at <a href="" class="nice-link">sanaiqbal321@gmail.com</a>
+		If you would like me to help you out on chaturbate or with the profile work please email me at <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>
 		<br>
 		Please view below some of the work that I have done.</p>
 	</div>
