--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="hover.css">
         <script src="hover.js"></script> 
+<link rel="stylesheet" type="text/css" href="css/CircleButtons/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/CircleButtons/common.css" />
+        <link rel="stylesheet" type="text/css" href="css/CircleButtons/style5.css" />
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
+		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 
 
 </head>
@@ -45,10 +50,63 @@
 		Please view below some of the work that I have done.</p>
 	</div>
 	<div class="section" id="section1">
-	    <div class="slide "><h1>Simple Demo</h1></div>
-	    <div class="slide active"><h1>Only text</h1></div>
-	    <div class="slide"><h1>And text</h1></div>
-	    <div class="slide"><h1>And more text</h1></div>
+	    <div class="container">
+			
+			
+				<ul class="ch-grid">
+					<li>
+						<div class="ch-item ch-img-1">				
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front ch-img-1"></div>
+									<div class="ch-info-back">
+										<h3>Anas</h3>
+										<p> <a href="http://drbl.in/ewng">Facebook</a></p>
+									</div>	
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item ch-img-2">
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front ch-img-2"></div>
+									<div class="ch-info-back">
+										<h3>Anas</h3>
+										<p> <a href="http://drbl.in/eQDg">Twitter</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item ch-img-3">
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front ch-img-3"></div>
+									<div class="ch-info-back">
+										<h3>Anas</h3>
+										<p> <a href="http://drbl.in/ejLW">Linkedin</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item ch-img-4">
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front ch-img-4"></div>
+									<div class="ch-info-back">
+										<h3>Anas</h3>
+										<p> <a href="http://drbl.in/ejLW">Github</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul></div>
 	</div>
 	<div class="section" id="section2"><h1>No wraps, no extra markup</h1></div>
 	<div class="section" id="section3"><h1>Just the simplest demo ever</h1></div>
