--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 								<div class="ch-info">
 									<div class="ch-info-front ch-img-1"></div>
 									<div class="ch-info-back">
-										<h3>Anas</h3>
-										<p> <a href="http://drbl.in/ewng">Facebook</a></p>
+										<p> <a href="https://chaturbate.com/Assleigh3/">Assleigh3</a></p>
 									</div>	
 								</div>
 							</div>
@@ -73,8 +72,7 @@
 								<div class="ch-info">
 									<div class="ch-info-front ch-img-2"></div>
 									<div class="ch-info-back">
-										<h3>Anas</h3>
-										<p> <a href="http://drbl.in/eQDg">Twitter</a></p>
+										<p> <a href="https://chaturbate.com/Barbiela/">Barbiela</a></p>
 									</div>
 								</div>
 							</div>
@@ -86,8 +84,7 @@
 								<div class="ch-info">
 									<div class="ch-info-front ch-img-3"></div>
 									<div class="ch-info-back">
-										<h3>Anas</h3>
-										<p> <a href="http://drbl.in/ejLW">Linkedin</a></p>
+										<p> <a href="https://chaturbate.com/bluntbabe/">Blunt Babe</a></p>
 									</div>
 								</div>
 							</div>
@@ -99,8 +96,7 @@
 								<div class="ch-info">
 									<div class="ch-info-front ch-img-4"></div>
 									<div class="ch-info-back">
-										<h3>Anas</h3>
-										<p> <a href="http://drbl.in/ejLW">Github</a></p>
+										<p> <a href="https://chaturbate.com/emmaryder18/">Emmaryder18</a></p>
 									</div>
 								</div>
 							</div>
