--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>fullPage.js A simple Demo</title>
-	<meta name="author" content="Alvaro Trigo Lopez" />
-	<meta name="description" content="fullPage very simple demo." />
-	<meta name="keywords"  content="fullpage,jquery,demo,simple" />
+	<title>Sanaiqbal321</title>
+	<meta name="author" content="SanaIaba321" />
+	<meta name="description" content="Chaturbate Profile developer." />
+	<meta name="keywords"  content="chaturbate,profile,web,developer" />
 	<meta name="Resource-type" content="Document" />
 
 
