--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					</li>
 				</ul></div>
 	</div>
-	<div class="section" id="section2"><h1>No wraps, no extra markup</h1></div>
-	<div class="section" id="section3"><h1>Just the simplest demo ever</h1></div>
+	<div class="section" id="section2"><h1>More of the work that I have done</h1></div>
+	<div class="section" id="section3"><h1>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 20+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</h1></div>
 </div>
 
 </body>
