--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" type="text/css" href="css/CircleButtons/style5.css" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
-
+		<script type="text/javascript" src="js/googleanalytics.js"></script>
 
 </head>
 <body>
