--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 		<script type="text/javascript" src="js/googleanalytics.js"></script>
-
+		<script type="text/javascript" src="js/addthis.js"></script>
 </head>
 <body>
 
