--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 		<script type="text/javascript" src="js/googleanalytics.js"></script>
-		<script type="text/javascript" src="js/addthis.js"></script>
+		<!-- <script type="text/javascript" src="js/addthis.js"></script> -->
 </head>
 <body>
 
@@ -108,6 +108,6 @@
 	<div class="section" id="section2"><h1>More of the work that I have done</h1></div>
 	<div class="section" id="section3"><h1>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 20+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</h1></div>
 </div>
-
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58d2047a7cd4face"></script> 
 </body>
 </html>
