--- a/index.html
+++ b/index.html
@@ -39,7 +39,29 @@
 		<!-- <script type="text/javascript" src="js/addthis.js"></script> -->
 </head>
 <body>
+<header class="main_h">
 
+    <div class="row">
+        <a class="logo" href="#">P/F</a>
+
+        <div class="mobile-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <nav>
+            <ul>
+                <li><a href=".sec01">Section 01</a></li>
+                <li><a href=".sec02">Section 02</a></li>
+                <li><a href=".sec03">Section 03</a></li>
+                <li><a href=".sec04">Section 04</a></li>
+            </ul>
+        </nav>
+
+    </div> <!-- / row -->
+
+</header>
 <div id="fullpage">
 	<div class="section active" id="section0">
 		<h1>Hi</h1>
