--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 		<script type="text/javascript" src="js/googleanalytics.js"></script>
-		<!-- <script type="text/javascript" src="js/addthis.js"></script> -->
+		<script type="text/javascript" src="js/navbar.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
 <header class="main_h">
