--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <link rel="stylesheet" type="text/css" href="css/CircleButtons/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/CircleButtons/common.css" />
         <link rel="stylesheet" type="text/css" href="css/CircleButtons/style5.css" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 		<script type="text/javascript" src="js/googleanalytics.js"></script>
 		<script type="text/javascript" src="js/navbar.js"></script>
