--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		If you would like me to help you out on chaturbate or with the profile work please email me at <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>
 		<br>
 		Please view below some of the work that I have done.</p>
+		<a class="twitter-timeline" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
 	<div class="section" id="section1">
 	<h1>Some of the best works that I have done on chaturbate</h1>
