--- a/index.html
+++ b/index.html
@@ -136,18 +136,27 @@
 	</div>
 	<div class="section" id="section2">
 	<h1>More of the work that I have done</h1>
+	  <div class="row">
+	 <div class="col-sm-3 col-md-3">
 	<div>
 		<a href="">tattooedsweetie</a>
 
 	</div>
+	</div>
+	 <div class="col-sm-3 col-md-3">
 	<div>
 		<a href="">assgoddess20</a>
-	</div>
+</div>	</div>
+	 <div class="col-sm-3 col-md-3">
+
 	<div>
 		<a href="">bellavonna</a>
 	</div>
+	</div>
+		 <div class="col-sm-3 col-md-3">
 	<div>
 		<a href="">fireflybaby</a>
+	</div>
 	</div>
 	<div>
 		<a href="">lizzyshaenaughty</a>
