--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 	</div>
 	<div class="section" id="section2">
 	<h1>More of the work that I have done</h1>
+	<div class="container-fluid">
 	<div class="row">
 	 	<div class="col-sm-3 col-md-3">
 			<div>
@@ -159,6 +160,7 @@
 				<a href="">fireflybaby</a>
 			</div>
 		</div>
+	</div>
 	</div>
 	<div>
 		<a href="">lizzyshaenaughty</a>
