--- a/index.html
+++ b/index.html
@@ -170,6 +170,23 @@
 		</div>
 	</div>
 	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 20+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
+
+	<div class="container-fluid">
+  <h1>Medium Grid</h1>
+  <p>The following example will result in a 25%/75% split on small devices and a 50%/50% split on medium (and large) devices. On extra small devices, it will automatically stack (100%).</p>
+  <p>Resize the browser window to see the effect.</p>
+  <div class="row">
+    <div class="col-sm-3 col-md-6" style="background-color:yellow;">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </div>
+    <div class="col-sm-9 col-md-6" style="background-color:pink;">
+      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+    </div>
+  </div>
+</div>
+
+
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
