--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 		<script type="text/javascript" src="js/googleanalytics.js"></script>
 		<script type="text/javascript" src="js/navbar.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/navbar.css">
+		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <header class="main_h">
