--- a/index.html
+++ b/index.html
@@ -170,8 +170,34 @@
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 	</div>
-	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 20+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
+	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 30+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
 
+<ul>
+	<li>Assleigh3</li>
+	<li>KikiKush</li>
+	<li>barbiela</li>
+	<li>NicknTay</li>
+	<li>harlyann93</li>
+	<li>alananala710</li>
+	<li>sweet_sara_26</li>
+	<li>xxhellokitty22xx</li>
+	<li>lyannaskye</li>
+	<li>jewpolian</li>
+	<li>scarlett_hazee</li>
+	<li>sexy_cpl_for_fun_420</li>
+	<li>jvalweaver</li>
+	<li>beachbabe0891</li>
+	<li>juicyjulia10</li>
+	<li>poppy_foxdale</li>
+	<li>jeweledbeaver</li>
+	<li>allykat20</li>
+	<li>h2oh</li>
+	<li>batmanlover89</li>
+	<li>ivanabloom</li>
+	<li>barbiesplayhouse1</li>
+	<li>freyjaalunaa</li>
+
+</ul>
 	
 </div>
 
