--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
 	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 30+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
 
 <ul>
-	<li>Assleigh3</li>
-	<li>KikiKush</li>
-	<li>barbiela</li>
-	<li>NicknTay</li>
+	<li><button type="button" class="btn btn-info">Assleigh3</button></li>
+	<li><button type="button" class="btn btn-info">KikiKush</button></li>
+	<li><button type="button" class="btn btn-info">barbiela</button></li>
+	<li><button type="button" class="btn btn-info">NicknTay</button></li>
 	<li>harlyann93</li>
 	<li>alananala710</li>
 	<li>sweet_sara_26</li>
@@ -187,6 +187,7 @@
 	<li>sexy_cpl_for_fun_420</li>
 	<li>jvalweaver</li>
 	<li>beachbabe0891</li>
+	<li>wickedwoman1990</li>
 	<li>juicyjulia10</li>
 	<li>poppy_foxdale</li>
 	<li>jeweledbeaver</li>
