--- a/index.html
+++ b/index.html
@@ -172,31 +172,78 @@
 	</div>
 	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 30+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
 
+<div class="container-fluid">
+	<div class="row">
+	 	<div class="col-sm-3 col-md-3">
+			<ul>
+	<li><button type="button" class="btn btn-info">Assleigh3</button></li>
+	<li><button type="button" class="btn btn-info">KikiKush</button></li>
+	<li><button type="button" class="btn btn-info">barbiela</button></li>
+	<li><button type="button" class="btn btn-info">NicknTay</button></li>
+	<li><button type="button" class="btn btn-info">harlyann93</button></li>
+	<li><button type="button" class="btn btn-info">alananala710</button></li>
+	</ul>
+		</div>
+	 	<div class="col-sm-3 col-md-3">
+			<ul>
+				<li><button type="button" class="btn btn-info">sweet_sara_26</button></li>
+	<li><button type="button" class="btn btn-info">xxhellokitty22xx</button></li>
+	<li><button type="button" class="btn btn-info">lyannaskye</button></li>
+	<li><button type="button" class="btn btn-info">jewpolian</button></li>
+	<li><button type="button" class="btn btn-info">scarlett_hazee</button></li>
+	<li><button type="button" class="btn btn-info">sexy_cpl_for_fun_420</button></li>
+			</ul>
+		</div>
+	 	<div class="col-sm-3 col-md-3">
+
+			<ul>
+				<li><button type="button" class="btn btn-info">jvalweaver</button></li>
+	<li><button type="button" class="btn btn-info">beachbabe0891</button></li>
+	<li><button type="button" class="btn btn-info">wickedwoman1990</button></li>
+	<li><button type="button" class="btn btn-info">juicyjulia10</button></li>
+	<li><button type="button" class="btn btn-info">poppy_foxdale</button></li>
+	<li><button type="button" class="btn btn-info">jeweledbeaver</button></li>
+			</ul>
+		</div>
+		<div class="col-sm-3 col-md-3">
+			<ul>
+				<li><button type="button" class="btn btn-info">allykat20</button></li>
+	<li><button type="button" class="btn btn-info">h2oh</button></li>
+	<li><button type="button" class="btn btn-info">batmanlover89</button></li>
+	<li><button type="button" class="btn btn-info">ivanabloom</button></li>
+	<li><button type="button" class="btn btn-info">barbiesplayhouse1</button></li>
+	<li><button type="button" class="btn btn-info">freyjaalunaa</button></li>
+
+			</ul>
+		</div>
+	</div>
+	</div>
+
 <ul>
 	<li><button type="button" class="btn btn-info">Assleigh3</button></li>
 	<li><button type="button" class="btn btn-info">KikiKush</button></li>
 	<li><button type="button" class="btn btn-info">barbiela</button></li>
 	<li><button type="button" class="btn btn-info">NicknTay</button></li>
-	<li>harlyann93</li>
-	<li>alananala710</li>
-	<li>sweet_sara_26</li>
-	<li>xxhellokitty22xx</li>
-	<li>lyannaskye</li>
-	<li>jewpolian</li>
-	<li>scarlett_hazee</li>
-	<li>sexy_cpl_for_fun_420</li>
-	<li>jvalweaver</li>
-	<li>beachbabe0891</li>
-	<li>wickedwoman1990</li>
-	<li>juicyjulia10</li>
-	<li>poppy_foxdale</li>
-	<li>jeweledbeaver</li>
-	<li>allykat20</li>
-	<li>h2oh</li>
-	<li>batmanlover89</li>
-	<li>ivanabloom</li>
-	<li>barbiesplayhouse1</li>
-	<li>freyjaalunaa</li>
+	<li><button type="button" class="btn btn-info">harlyann93</button></li>
+	<li><button type="button" class="btn btn-info">alananala710</button></li>
+	<li><button type="button" class="btn btn-info">sweet_sara_26</button></li>
+	<li><button type="button" class="btn btn-info">xxhellokitty22xx</button></li>
+	<li><button type="button" class="btn btn-info">lyannaskye</button></li>
+	<li><button type="button" class="btn btn-info">jewpolian</button></li>
+	<li><button type="button" class="btn btn-info">scarlett_hazee</button></li>
+	<li><button type="button" class="btn btn-info">sexy_cpl_for_fun_420</button></li>
+	<li><button type="button" class="btn btn-info">jvalweaver</button></li>
+	<li><button type="button" class="btn btn-info">beachbabe0891</button></li>
+	<li><button type="button" class="btn btn-info">wickedwoman1990</button></li>
+	<li><button type="button" class="btn btn-info">juicyjulia10</button></li>
+	<li><button type="button" class="btn btn-info">poppy_foxdale</button></li>
+	<li><button type="button" class="btn btn-info">jeweledbeaver</button></li>
+	<li><button type="button" class="btn btn-info">allykat20</button></li>
+	<li><button type="button" class="btn btn-info">h2oh</button></li>
+	<li><button type="button" class="btn btn-info">batmanlover89</button></li>
+	<li><button type="button" class="btn btn-info">ivanabloom</button></li>
+	<li><button type="button" class="btn btn-info">barbiesplayhouse1</button></li>
+	<li><button type="button" class="btn btn-info">freyjaalunaa</button></li>
 
 </ul>
 	
