--- a/index.html
+++ b/index.html
@@ -177,75 +177,50 @@
 	 	<div class="col-sm-3 col-md-3">
 			<ul>
 	<li><button type="button" class="btn btn-info">Assleigh3</button></li>
+	<br>
 	<li><button type="button" class="btn btn-info">KikiKush</button></li>
-	<li><button type="button" class="btn btn-info">barbiela</button></li>
-	<li><button type="button" class="btn btn-info">NicknTay</button></li>
-	<li><button type="button" class="btn btn-info">harlyann93</button></li>
-	<li><button type="button" class="btn btn-info">alananala710</button></li>
+	<br><li><button type="button" class="btn btn-info">barbiela</button></li>
+	<br><li><button type="button" class="btn btn-info">NicknTay</button></li>
+	<br><li><button type="button" class="btn btn-info">harlyann93</button></li>
+	<br><li><button type="button" class="btn btn-info">alananala710</button></li>
 	</ul>
 		</div>
 	 	<div class="col-sm-3 col-md-3">
 			<ul>
 				<li><button type="button" class="btn btn-info">sweet_sara_26</button></li>
-	<li><button type="button" class="btn btn-info">xxhellokitty22xx</button></li>
-	<li><button type="button" class="btn btn-info">lyannaskye</button></li>
-	<li><button type="button" class="btn btn-info">jewpolian</button></li>
-	<li><button type="button" class="btn btn-info">scarlett_hazee</button></li>
-	<li><button type="button" class="btn btn-info">sexy_cpl_for_fun_420</button></li>
+	<br><li><button type="button" class="btn btn-info">xxhellokitty22xx</button></li>
+	<br><li><button type="button" class="btn btn-info">lyannaskye</button></li>
+	<br><li><button type="button" class="btn btn-info">jewpolian</button></li>
+	<br><li><button type="button" class="btn btn-info">scarlett_hazee</button></li>
+	<br><li><button type="button" class="btn btn-info">sexy_cpl_for_fun_420</button></li>
 			</ul>
 		</div>
 	 	<div class="col-sm-3 col-md-3">
 
 			<ul>
 				<li><button type="button" class="btn btn-info">jvalweaver</button></li>
-	<li><button type="button" class="btn btn-info">beachbabe0891</button></li>
-	<li><button type="button" class="btn btn-info">wickedwoman1990</button></li>
-	<li><button type="button" class="btn btn-info">juicyjulia10</button></li>
-	<li><button type="button" class="btn btn-info">poppy_foxdale</button></li>
-	<li><button type="button" class="btn btn-info">jeweledbeaver</button></li>
+	<br><li><button type="button" class="btn btn-info">beachbabe0891</button></li>
+	<br><li><button type="button" class="btn btn-info">wickedwoman1990</button></li>
+	<br><li><button type="button" class="btn btn-info">juicyjulia10</button></li>
+	<br><li><button type="button" class="btn btn-info">poppy_foxdale</button></li>
+	<br><li><button type="button" class="btn btn-info">jeweledbeaver</button></li>
 			</ul>
 		</div>
 		<div class="col-sm-3 col-md-3">
 			<ul>
 				<li><button type="button" class="btn btn-info">allykat20</button></li>
-	<li><button type="button" class="btn btn-info">h2oh</button></li>
-	<li><button type="button" class="btn btn-info">batmanlover89</button></li>
-	<li><button type="button" class="btn btn-info">ivanabloom</button></li>
-	<li><button type="button" class="btn btn-info">barbiesplayhouse1</button></li>
-	<li><button type="button" class="btn btn-info">freyjaalunaa</button></li>
+	<br><li><button type="button" class="btn btn-info">h2oh</button></li>
+	<br><li><button type="button" class="btn btn-info">batmanlover89</button></li>
+	<br><li><button type="button" class="btn btn-info">ivanabloom</button></li>
+	<br><li><button type="button" class="btn btn-info">barbiesplayhouse1</button></li>
+	<br><li><button type="button" class="btn btn-info">freyjaalunaa</button></li>
 
 			</ul>
 		</div>
 	</div>
 	</div>
 
-<ul>
-	<li><button type="button" class="btn btn-info">Assleigh3</button></li>
-	<li><button type="button" class="btn btn-info">KikiKush</button></li>
-	<li><button type="button" class="btn btn-info">barbiela</button></li>
-	<li><button type="button" class="btn btn-info">NicknTay</button></li>
-	<li><button type="button" class="btn btn-info">harlyann93</button></li>
-	<li><button type="button" class="btn btn-info">alananala710</button></li>
-	<li><button type="button" class="btn btn-info">sweet_sara_26</button></li>
-	<li><button type="button" class="btn btn-info">xxhellokitty22xx</button></li>
-	<li><button type="button" class="btn btn-info">lyannaskye</button></li>
-	<li><button type="button" class="btn btn-info">jewpolian</button></li>
-	<li><button type="button" class="btn btn-info">scarlett_hazee</button></li>
-	<li><button type="button" class="btn btn-info">sexy_cpl_for_fun_420</button></li>
-	<li><button type="button" class="btn btn-info">jvalweaver</button></li>
-	<li><button type="button" class="btn btn-info">beachbabe0891</button></li>
-	<li><button type="button" class="btn btn-info">wickedwoman1990</button></li>
-	<li><button type="button" class="btn btn-info">juicyjulia10</button></li>
-	<li><button type="button" class="btn btn-info">poppy_foxdale</button></li>
-	<li><button type="button" class="btn btn-info">jeweledbeaver</button></li>
-	<li><button type="button" class="btn btn-info">allykat20</button></li>
-	<li><button type="button" class="btn btn-info">h2oh</button></li>
-	<li><button type="button" class="btn btn-info">batmanlover89</button></li>
-	<li><button type="button" class="btn btn-info">ivanabloom</button></li>
-	<li><button type="button" class="btn btn-info">barbiesplayhouse1</button></li>
-	<li><button type="button" class="btn btn-info">freyjaalunaa</button></li>
 
-</ul>
 	
 </div>
 
