--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 		<script type="text/javascript" src="js/navbar.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/navbar.css">
 		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		 <style type="text/css">
+		 	.centerDiv
+{
+     margin: 0 auto;
+     width: 100px; 
+}
+		 </style>
 </head>
 <body>
 <header class="main_h">
@@ -172,6 +179,7 @@
 	</div>
 	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 30+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
 
+<div class="centerDiv">
 <div class="container-fluid">
 	<div class="row">
 	 	<div class="col-sm-3 col-md-3">
@@ -219,8 +227,7 @@
 		</div>
 	</div>
 	</div>
-
-
+</div>
 	
 </div>
 
