--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		 <footer class="page-footer">
+		 <footer class="footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
