--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 		</div>
 		 <footer class="footer">
           <div class="container">
-            <div class="row">
+      		<p>footer </p>
+            <!-- <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Footer Content</h5>
                 <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
@@ -104,7 +105,7 @@
             <div class="container">
             © 2014 Copyright Text
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
+            </div> -->
           </div>
         </footer>
 	</div>
