--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
+		<div style="position: fixed;bottom: 0%">
 		 <footer class="footer">
           <div class="container">
       		<p>footer </p>
@@ -108,6 +109,7 @@
             </div> -->
           </div>
         </footer>
+        </div>
 	</div>
 	<div class="section" id="section1">
 	<h1>Some of the best works that I have done on chaturbate</h1>
