--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 		<div style="position: fixed;bottom: 0%">
 		 <footer class="footer">
           <div class="container">
-      		<p>footer </p>
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> </p>
+      		<p>Twitter</p>
+      		<p>© 2014 Copyright Text</p>
             <!-- <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Footer Content</h5>
