--- a/index.html
+++ b/index.html
@@ -86,27 +86,6 @@
 		 <footer class="footer">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
-            <!-- <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div> -->
           </div>
         </footer>
         </div>
@@ -169,6 +148,13 @@
 				<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
+		<div style="position: fixed;bottom: 0%">
+		 <footer class="footer">
+          <div class="container">
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+          </div>
+        </footer>
+        </div>
 	</div>
 	<div class="section" id="section2">
 	<h1>More of the work that I have done</h1>
@@ -204,6 +190,13 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
+		<div style="position: fixed;bottom: 0%">
+		 <footer class="footer">
+          <div class="container">
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+          </div>
+        </footer>
+        </div>
 	</div>
 	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 30+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
 
@@ -262,6 +255,13 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
+		<div style="position: fixed;bottom: 0%">
+		 <footer class="footer">
+          <div class="container">
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+          </div>
+        </footer>
+        </div>
 </div>
 <div class="section" id="section4">
 	<h1>Please fill out the following form for making your nice gorgeous profile</h1>
@@ -269,6 +269,13 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
+		<div style="position: fixed;bottom: 0%">
+		 <footer class="footer">
+          <div class="container">
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+          </div>
+        </footer>
+        </div>
 </div>
 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58d2047a7cd4face"></script> 
