--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 				<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		<div style="position: fixed;bottom: 0%">
+		<!-- <div style="position: fixed;bottom: 0%">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
-        </div>
+        </div> -->
 	</div>
 	<div class="section" id="section2">
 	<h1>More of the work that I have done</h1>
