--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		<div style="position: fixed;bottom: 0%">
+		<div style="position: fixed;bottom: 1%">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
@@ -249,7 +249,7 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		<div style="position: fixed;bottom: 0%">
+		<div style="position: fixed;bottom: 1px">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
