--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 				<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		<!-- <div style="position: fixed;bottom: 0%">
+		<div style="position: fixed;bottom: 0%">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
-        </div> -->
+        </div>
 	</div>
 	<div class="section" id="section2">
 	<h1>More of the work that I have done</h1>
@@ -186,11 +186,11 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		<div style="position: fixed;bottom: 1%">
+		<!-- <div style="position: fixed;bottom: 1%">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
-        </div>
+        </div> -->
 	</div>
 	<div class="section" id="section3"><h1>Modding</h1><p>Along with making chaturbate profiles looking great I also help girls a lot for promoting themselves, getting a higher rank on the page and better monitization techniques. If you would like to get any help please email me at  <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a>. By doing all the help I have become a mod in more then 30+ rooms(actually I have lost count). Some of the rooms where I am the mod are the following.</p>
 
@@ -248,12 +248,13 @@
 
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-		</div>
-		<div style="position: fixed;bottom: 1px">
+		
+</div>
+		<!-- <div style="position: fixed;bottom: 1px">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
-        </div>
+        </div> -->
 </div>
 <div class="section" id="section4">
 	<h1>Please fill out the following form for making your nice gorgeous profile</h1>
@@ -261,11 +262,11 @@
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
-		<div style="position: fixed;bottom: 0%">
+		<!-- <div style="position: fixed;bottom: 0%">
           <div class="container">
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
           </div>
-        </div>
+        </div> -->
 </div>
 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58d2047a7cd4face"></script> 
